WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279042
Unreviewed mac Catalyst build fix after
283070@main
https://bugs.webkit.org/show_bug.cgi?id=279042
Summary
Unreviewed mac Catalyst build fix after 283070@main
Chris Dumez
Reported
2024-09-02 17:48:27 PDT
Fix build after
283070@main
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-02 17:48:38 PDT
<
rdar://problem/135161225
>
Chris Dumez
Comment 2
2024-09-02 17:49:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33047
EWS
Comment 3
2024-09-02 18:08:14 PDT
Committed
283075@main
(7b43e343da9c): <
https://commits.webkit.org/283075@main
> Reviewed commits have been landed. Closing PR #33047 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug