Unreviewed mac Catalyst build fix after 283070@main https://bugs.webkit.org/show_bug.cgi?id=279042 rdar://135161225

* Source/WebKit/UIProcess/Cocoa/TextCheckingController.h:
* Source/WebKit/UIProcess/Cocoa/TextCheckingController.mm:
(WebKit::TextCheckingController::replaceRelativeToSelection):
(WebKit::TextCheckingController::removeAnnotationRelativeToSelection):

Canonical link: https://commits.webkit.org/283075@main